--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -12,6 +12,7 @@ body {
 
 a {
   cursor: url('https://cdn.jsdelivr.net/gh/moezx/cdn@3.1.9/img/Sakura/cursor/ayuda.cur'), auto;
+  text-decoration: none;
 }
 
 .svg-icon {
