--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -2,45 +2,34 @@
   0% {
     transform: rotate(-15deg);
   }
-
   2% {
     transform: rotate(15deg);
   }
-
   4% {
     transform: rotate(-18deg);
   }
-
   6% {
     transform: rotate(18deg);
   }
-
   8% {
     transform: rotate(-22deg);
   }
-
   10% {
     transform: rotate(22deg);
   }
-
   12% {
     transform: rotate(-18deg);
   }
-
   14% {
     transform: rotate(18deg);
   }
-
   16% {
     transform: rotate(-12deg);
   }
-
   18% {
     transform: rotate(12deg);
   }
-
-  20%,
-  100% {
+  20%, 100% {
     transform: rotate(0);
   }
 }
@@ -49,19 +38,15 @@
   0% {
     clip: rect(36px, 9999px, 9px, 0);
   }
-
   25% {
     clip: rect(25px, 9999px, 99px, 0);
   }
-
   50% {
     clip: rect(50px, 9999px, 102px, 0);
   }
-
   75% {
     clip: rect(30px, 9999px, 92px, 0);
   }
-
   100% {
     clip: rect(91px, 9999px, 98px, 0);
   }
@@ -73,25 +58,21 @@
     left: 1px;
     clip: rect(65px, 9999px, 119px, 0);
   }
-
   25% {
     top: -6px;
     left: 4px;
     clip: rect(79px, 9999px, 19px, 0);
   }
-
   50% {
     top: -3px;
     left: 2px;
     clip: rect(68px, 9999px, 11px, 0);
   }
-
   75% {
     top: 0;
     left: -4px;
     clip: rect(95px, 9999px, 53px, 0);
   }
-
   100% {
     top: -1px;
     left: -1px;
@@ -103,20 +84,7 @@
   0% {
     transform: translateY(0)
   }
-
   50% {
     transform: translateY(-6px);
-  }
-}
-
-@keyframes downUp {
-  0% {
-    opacity: 0.5;
-    transform: translateY(0);
-  }
-  
-  100% {
-    opacity: 0.8;
-    transform: translateY(-16px);
   }
 }
